namespace/llm/mcpmsh/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcpmsh
  namespace: llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcpmsh
  template:
    metadata:
      labels:
        app: mcpmsh
    spec:
      containers:
        - name: mcpmsh
          image: docker.io/mindsdb/mindsdb:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 47334
              protocol: TCP
            - containerPort: 47337
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /root/mdb_storage
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: mcpmsh-config
